--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.8'
-## docker compose up -d
+## run complete: docker compose up -d
 ## docker compose down
+
+## run test requirements: docker compose up -d redis postgres-test
 
 services:
   app:
